[package]
name = "blackfrost"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt"] }
tokio-test = { version = "0.4.4", default-features = false }
